[package]
name = "valkey-flow"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1}

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }
redis = { version = "0.32.1", features = ["tokio-comp"] }
dotenvy = "0.15"
tokio-util = "0.7"

derive_more = { version = "2", features = ["from", "display"] }
